# surakarta

./: .gitignore  LICENSE  README.md  docker-compose.yml  env.template  evaluate.py  main.py  pyproject.toml  train.py
agents/: defensive.py  dqn.py  greedy.py  minimax.py  monte_carlo.py  random.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/nginx/: nginx.conf
engine/: surakarta.py  test_surakarta.py
web/backend/: manage.py
web/backend/game/: admin.py  game_manager.py  models.py  serializers.py  urls.py  views.py
web/backend/game/migrations/: 0001_initial.py  0002_match.py  0003_match_black_player_match_current_player_idx_and_more.py  0004_remove_match_game_id_match_game.py  0005_userprofile_analytics_consent.py  0006_remove_userprofile_highest_score.py  0007_userprofile_ip_address_userprofile_user_agent.py
web/backend/surakarta/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  index.css  main.tsx  types.ts
web/frontend/src/api/: game.ts
web/frontend/src/components/: Auth.tsx  Board.tsx  Controls.tsx  Game.tsx  GameHistory.tsx  Matchmaking.tsx  MultiplayerGame.tsx  UserProfile.tsx
