[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["surakarta_env"]

[project]
name = "surakarta_env"
version = "0.0.1"
dependencies = [
  "gymnasium",
  "pygame",
  "pre-commit",
  "torch",
  "tqdm",
  "matplotlib",
  "django",
  "djangorestframework",
  "django-cors-headers",
]
